# 2048

./: CMakeLists.txt  README.adoc  main.cc
Src/: game2048.cc  game2048.h  main.cc
Tools/astyle/: astylerc
